2020-6-11 [mid] 栈的应用，递减栈