@@ -8,29 +8,30 @@
 
 
 import java.util.LinkedList;
-import java.util.List;
 
 //leetcode submit region begin(Prohibit modification and deletion)
 class Solution {
     /**
-     * 思路：借助递减栈，遍历数组T：
+     * 思路：后面第一个比当前大，等价于前面最后一个比后面小。
+     * 借助递减栈，遍历数组T：
      * 1）如果这天的温度小于栈顶的温度，这天入栈；
      * 2）如果这天的温度大于栈顶的温度，那么栈顶那天的时间跨度就是当前时间减掉栈顶时间，
-     *    然后栈顶出栈，持续判断直到栈空或者满足递减栈入栈规则。
+     *    然后栈顶出栈，持续判断直到栈空或者满足递减栈入栈规则，此时该天入栈。
      * @param T
      * @return
      */
     public int[] dailyTemperatures(int[] T) {
-        int[] span = new int[T.length];
-        List<Integer> stack = new LinkedList<>(); // 递减栈，存放递减温度对应的日期
+        int[] span = new int[T.length]; // 默认初始值是0，不被更新的话就表示之后没有比当前更大的元素
+        LinkedList<Integer> stack = new LinkedList<>(); // 递减栈，存放递减温度对应的日期index
         for (int i = 0; i < T.length; i++) {
-            while (!stack.isEmpty() && T[i] > T[stack.get(stack.size() - 1)]) {
-                int index = stack.get(stack.size() - 1);
+            while (!stack.isEmpty() && T[i] > T[stack.getFirst()]) {
+                int index = stack.getFirst();
                 span[index] = i - index;
-                stack.remove(stack.size() - 1);
+                stack.removeFirst();
             }
-            stack.add(i);
+            stack.addFirst(i);
         }
+
         return span;
     }
 }
